# cao-queue

./: .dockerignore  Cargo.toml  Makefile  README.md  server.dockerfile
.github/workflows/: rust.yml
cao-queue/: Cargo.toml
cao-queue/benches/: bucket_allocator_benches.rs  cao_q_benches.rs  core-benches.rs
cao-queue/src/: commands.rs  lib.rs  message.rs
cao-queue/src/collections/: bucket_allocator.rs  mod.rs  spmcfifo.rs
cao-queue/src/collections/impls/: atomic_option.rs  concurrent_message_map.rs  spmcfifo.rs
cao-queue/src/collections/impls/concurrent_message_map/: table.rs
cli/: Cargo.toml
cli/src/: main.rs
client/: Cargo.toml
client/src/: lib.rs
core/: Cargo.toml  README.md
core/src/: commands.rs  message.rs
core/src/collections/: bounded.rs  mod.rs  mpfifo.rs  spmcbounded.rs  spmcfifo.rs
server/: Cargo.toml
server/src/: client.rs  main.rs
server/src/client/: spmc.rs  tests.rs
server/src/client/spmc/: tests.rs
testing/cli/: Cargo.toml
testing/cli/src/: caoq_test.rs  main.rs  redis_test.rs
testing/manifests/: caoq.yaml  rabbit.yaml  redis.yaml
