[package]
name = "cao-queue"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["collections", "serde"]
collections = []

[dependencies]
thiserror = "1"
serde = { version = "1", optional = true, features = ["derive"] }
