[package]
name = "caoq"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
caoq-client = { path = "../client" }

[dependencies.tokio]
version = "0.3"
features = ["full"]
