[package]
name = "caoq-client"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cao-queue = { path = "../cao-queue", default-features = false, features = [
    "serde"
] }
url = "2"
thiserror = "*"
tokio-tungstenite = "0.12"
tokio = { version = "0.3", features = ["net"] }
bincode = "1"
futures-util = "*"
