[package]
name = "caoq-client"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"

[features]
default = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
caoq-core = { path = "../core", default-features = false, features = ["serde"] }
url = "2"
thiserror = "*"
async-tungstenite = { version = "0.10", features = ["async-std-runtime", "async-tls"] }
async-std = { version = "1" }
async-tls = "0.10"
bincode = "1"
futures-util = "*"
