[package]
name = "server"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cao-queue = { path = "../cao-queue", features = ["serde", "collections"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
slog = { version = "2", features = [
    "max_level_trace",
    "release_max_level_info"
] }
slog-term = "2"
slog-async = "2"
anyhow = "1"
serde_json = "1"
futures-util = "0.3"
warp = "0.2"

[dev-dependencies]
env_logger = { version = "0.7", default-features = false }
slog-stdlog = "3"
