[package]
name = "caoq"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
caoq-core = { path = "../core", features = ["serde", "collections"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
bincode = "1"
futures-util = "0.3"
warp = "0.2"
parking_lot = "0.11"
tracing = "0.1"
tracing-subscriber = "*"

[dev-dependencies]
env_logger = { version = "0.7", default-features = false }
